crates/monochange_integration_tests/tests/snapshots/release_record_artifacts__check_rejects_stale_prerelease_state_when_mode_is_off.snap
---
source: crates/monochange_integration_tests/tests/release_record_artifacts.rs
expression: "serde_json::json!({ \"relevantLines\": relevant_lines, })"
---
{
  "relevantLines": [
    "    prerelease state exists at [workspace]/.monochange/prerelease-state.json but prerelease mode is disabled; remove the state file or enable `[prerelease]`"
  ]
}
