crates/monochange_integration_tests/tests/snapshots/release_record_artifacts__prepare_release_increments_repeated_no_changeset_prereleases_from_json_state.snap
---
source: crates/monochange_integration_tests/tests/release_record_artifacts.rs
expression: "serde_json::json!({\n    \"first_release_targets\": first[\"release_targets\"], \"firstState\":\n    redact_prerelease_state(first_state), \"second_release_targets\":\n    second[\"release_targets\"], \"secondState\":\n    redact_prerelease_state(second_state),\n})"
---
{
  "firstState": {
    "base": "planned",
    "channel": "alpha",
    "created_at": "[timestamp]",
    "groups": {},
    "numbering": "increment",
    "packages": {
      "cargo:crates/app/Cargo.toml": {
        "latest_prerelease_version": "1.0.0-alpha.0",
        "original_stable_version": "1.0.0",
        "planned_stable_version": "1.0.0"
      },
      "cargo:crates/core/Cargo.toml": {
        "latest_prerelease_version": "1.0.0-alpha.0",
        "original_stable_version": "1.0.0",
        "planned_stable_version": "1.0.0"
      }
    },
    "release_note_changesets": [],
    "schema_version": 1,
    "updated_at": "[timestamp]"
  },
  "first_release_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.0-alpha.0](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.0-alpha.0) (2026-04-07)",
      "rendered_title": "app v1.0.0-alpha.0 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.0-alpha.0",
      "version": "1.0.0-alpha.0",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.0.0-alpha.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.0-alpha.0) (2026-04-07)",
      "rendered_title": "core v1.0.0-alpha.0 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.0.0-alpha.0",
      "version": "1.0.0-alpha.0",
      "version_format": "namespaced"
    }
  ],
  "secondState": {
    "base": "planned",
    "channel": "alpha",
    "created_at": "[timestamp]",
    "groups": {},
    "numbering": "increment",
    "packages": {
      "cargo:crates/app/Cargo.toml": {
        "latest_prerelease_version": "1.0.0-alpha.1",
        "original_stable_version": "1.0.0",
        "planned_stable_version": "1.0.0"
      },
      "cargo:crates/core/Cargo.toml": {
        "latest_prerelease_version": "1.0.0-alpha.1",
        "original_stable_version": "1.0.0",
        "planned_stable_version": "1.0.0"
      }
    },
    "release_note_changesets": [],
    "schema_version": 1,
    "updated_at": "[timestamp]"
  },
  "second_release_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.0-alpha.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.0-alpha.1) (2026-04-07)",
      "rendered_title": "app v1.0.0-alpha.1 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.0-alpha.1",
      "version": "1.0.0-alpha.1",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.0.0-alpha.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.0-alpha.1) (2026-04-07)",
      "rendered_title": "core v1.0.0-alpha.1 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.0.0-alpha.1",
      "version": "1.0.0-alpha.1",
      "version_format": "namespaced"
    }
  ]
}
