crates/monochange_integration_tests/tests/snapshots/release_record_artifacts__prepare_release_persists_one_record_and_reuses_it_on_later_runs.snap
---
source: crates/monochange_integration_tests/tests/release_record_artifacts.rs
expression: "serde_json::json!({\n    \"releaseRecordPath\":\n    first_paths[0].strip_prefix(root).unwrap_or_else(|error|\n    panic!(\"strip temp root: {error}\")).to_string_lossy(), \"index\":\n    index_entries, \"release_targets\": first[\"release_targets\"],\n})"
---
{
  "index": [
    {
      "hash": "1b9c77930352f342"
    }
  ],
  "releaseRecordPath": ".monochange/releases/1b9c77930352f342/release.json",
  "release_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) (2026-04-07)",
      "rendered_title": "app v1.0.1 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.1",
      "version": "1.0.1",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) (2026-04-07)",
      "rendered_title": "core v1.1.0 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.1.0",
      "version": "1.1.0",
      "version_format": "namespaced"
    }
  ]
}
