crates/monochange_integration_tests/tests/snapshots/release_record_artifacts__prepare_stable_release_removes_prerelease_state.snap
---
source: crates/monochange_integration_tests/tests/release_record_artifacts.rs
expression: "serde_json::json!({\n    \"prerelease_targets\": prerelease[\"release_targets\"], \"stable_targets\":\n    stable[\"release_targets\"], \"stateExistsAfterStable\":\n    root.join(\".monochange/prerelease-state.json\").exists(),\n})"
---
{
  "prerelease_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.1-alpha.0](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1-alpha.0) (2026-04-07)",
      "rendered_title": "app v1.0.1-alpha.0 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.1-alpha.0",
      "version": "1.0.1-alpha.0",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.1.0-alpha.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0-alpha.0) (2026-04-07)",
      "rendered_title": "core v1.1.0-alpha.0 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.1.0-alpha.0",
      "version": "1.1.0-alpha.0",
      "version_format": "namespaced"
    }
  ],
  "stable_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": true,
      "rendered_changelog_title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) (2026-04-07)",
      "rendered_title": "app v1.0.1 (2026-04-07)",
      "tag": false,
      "tag_name": "app/v1.0.1",
      "version": "1.0.1",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "rendered_changelog_title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) (2026-04-07)",
      "rendered_title": "core v1.1.0 (2026-04-07)",
      "tag": true,
      "tag_name": "core/v1.1.0",
      "version": "1.1.0",
      "version_format": "namespaced"
    }
  ],
  "stateExistsAfterStable": false
}
